--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react-router-dom": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.16"
   }
 }
